<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/yellowTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="15dp"
        android:text="@string/member"
        android:textColor="@color/biruTheme"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="-7dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="55dp"
                android:text="@string/atma"
                android:textColor="@color/biruTheme"
                android:textSize="45sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="20dp"
                android:text="@string/rental"
                android:textColor="@color/biruTheme"
                android:textSize="45sp" />



        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="255dp"
            android:layout_height="205dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="65dp"
            android:translationX="-35dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login_anim" />


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/transparant_card"
        android:outlineSpotShadowColor="@color/transparant"
        android:translationY="50dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="1dp"
        tools:targetApi="p">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLoginId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/id"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLoginPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_key_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTIET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textSize="17sp"
                app:backgroundTint="@color/loginButton"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnInstruktur"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/instruktur"
                android:textSize="17sp"
                app:backgroundTint="@color/loginButton"
                app:cornerRadius="20dp" />

            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_baseline_info_24"
                app:tint="#3930DF"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnManager"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/mo"
                android:textSize="17sp"
                app:backgroundTint="@color/loginButton"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>